--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Configuración de la base de datos
-spring.datasource.url=jdbc:postgresql://localhost:5432/nombre_de_tu_base_de_datos
-spring.datasource.username=tu_usuario_de_postgres
-spring.datasource.password=12346789
+spring.datasource.url=jdbc:postgresql://${DB_HOST}/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Configuración de JPA/Hibernate
